// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-iterable-lists's syncAudience destination action: all fields 1`] = `
Object {
  "listId": 12345,
  "subscribers": Array [
    Object {
      "email": "huzvabil@ejdieju.com",
      "userId": "6YwH7XkEUVsOPF",
    },
  ],
}
`;

exports[`Testing snapshot for actions-iterable-lists's syncAudience destination action: required fields 1`] = `
Object {
  "listId": 12345,
  "subscribers": Array [
    Object {
      "email": "test@example.com",
    },
  ],
}
`;
